--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,18 +1,13 @@
 <footer class="container-flex">
     <img src="./assets/img/nv_logo-w.png" alt="" width="75" height="66">
     <header class="section__header">
-        <h2 class="section__title">Contacto y redes</h2>
-        <p class="section__description">
-            Únete a cientos de anestesiólogos que ya utilizan NIVO+ para documentación médica eficiente y segura.
-        </p>
+        <h2 class="section__title">Contacto</h2>
+            <p class="section__description">
+                Para programar una demo o realizar consultas puede contactarnos a <a class="btn__tertiary" href="mailto:nivo@cares.ar">nivo@cares.ar</a>
+            </p>
         <div class="btn__container">
-            <a href="#" class="btn__primary">Prueba Gratuita</a>
-            <a href="#" class="btn__secondary">Programar Demo</a>
         </div>
     </header>
-    <div class="social__links">
-        <a href="#" class="social-link linkedin" aria-label="LinkedIn"></a>
-    </div>
     <script type="text/javascript" src="./assets/js/splash.js" defer></script>
     <script type="text/javascript" src="./assets/js/header.js" defer></script>
     <script type="text/javascript" src="./assets/js/carousel.js" defer></script>
