--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,7 @@
-<!-- Navigation -->
     <nav class="navbar">
-        <img src="./assets/img/nv_logo-h.png" alt="Logo" width="160">
+        <a href="#inicio">
+            <img src="./assets/img/nv_logo-h.png" alt="Logo" width="160">
+        </a>
         <ul class="nav-menu">
             <li class="nav-item">
                 <a href="#inicio" class="nav-link dropdown-arrow">Inicio</a>
@@ -17,9 +18,6 @@
             <li class="nav-item">
                 <a href="#testimoniales" class="nav-link dropdown-arrow">Testimoniales</a>
             </li>
-            <!-- <li class="nav-item">
-                <a href="#planes" class="nav-link dropdown-arrow">Planes</a>
-            </li> -->
             <li class="nav-item">
                 <a href="#contacto" class="btn__secondary--outline">Contacto</a>
             </li>
@@ -27,7 +25,6 @@
         <button class="menu-toggle" id="menuToggle">☰</button>
     </nav>
 
-    <!-- Mobile Navigation Overlay -->
     <div class="mobile-nav-overlay" id="mobileNavOverlay">
         <div class="mobile-nav-panel">
             <ul class="mobile-nav-menu">
@@ -46,9 +43,6 @@
                 <li class="nav-item">
                     <a href="#testimoniales" class="nav-link dropdown-arrow">Testimoniales</a>
                 </li>
-                <!-- <li class="nav-item">
-                    <a href="#planes" class="nav-link dropdown-arrow">Planes</a>
-                </li> -->
                 <li class="nav-item">
                     <a href="#contacto" class="btn__secondary--outline">Contacto</a>
                 </li>
