--- a/_includes/home.html
+++ b/_includes/home.html
@@ -6,11 +6,7 @@
             NIVO+ es el complemento ideal para Historias Clínicas Electrónicas, diseñado específicamente para las necesidades únicas de los anestesiólogos.
         </p>
         <div class="btn__container">
-            <a href="#" class="btn__primary">Prueba Gratuita</a>
-            <a href="#" class="btn__secondary">Programar Demo</a>
-        </div>
-        <div class="hero__note">
-            No se requiere tarjeta de crédito
+            <a href="#contacto" class="btn__primary">Programar Demo</a>
         </div>
     </div>
 </section>
