feat(footer): slider + disclaimer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,12 +12,12 @@
     <script type="text/javascript" src="./assets/js/header.js" defer></script>
     <script type="text/javascript" src="./assets/js/carousel.js" defer></script>
     <script type="text/javascript" src="./assets/js/slider.js" defer></script>
+    <script type="text/javascript" src="./assets/js/modal.js" defer></script>
 </footer>
 <div class="footer--disclaimer">
-       <p><b>© 2025 NIVO+ es una marca registrada.</b> Todos los derechos reservados.</p>
-        <nav>
-            <a href="">Privacidad</a>
-            <a href="">Términos</a>
-            <a href="">Cookies</a>
-        </nav>
+    <p><b>© 2025 NIVO+ es una marca registrada.</b> Todos los derechos reservados.</p>
+    <nav>
+        <a id="openModal">Términos y condiciones</a>
+        <a id="" href="">Política de privacidad</a>
+    </nav>
 </div>
