--- a/_includes/process.html
+++ b/_includes/process.html
@@ -8,9 +8,10 @@
         </p>
         
         <div class="slider-container">
-            <img class="image-slide active" src="./assets/img/nv_screen-01.jpg" alt="Evaluación Pre anestésica">
+            <img class="image-slide active" src="./assets/img/nv_screen-01.png" alt="Evaluación Pre anestésica">
             <img class="image-slide" src="./assets/img/nv_screen-02.png" alt="Protocolo anestésico">
-            <img class="image-slide" src="./assets/img/nv_screen-03.jpg" alt="Recuperación postanestésica">
+            <img class="image-slide" src="./assets/img/nv_screen-04.png" alt="Recuperación postanestésica">
+            <img class="image-slide" src="./assets/img/nv_screen-03.png" alt="Medicación e informes">
                 <i class="carousel-nav prev fa fa-chevron-left" onclick="changeSlide(-1)"></i>
                 <i class="carousel-nav next fa fa-chevron-right" onclick="changeSlide(1)"></i>
         </div>
@@ -20,6 +21,7 @@
             <label class="radio-btn active" onclick="goToSlide(0)"></label>
             <label class="radio-btn" onclick="goToSlide(1)"></label>
             <label class="radio-btn" onclick="goToSlide(2)"></label>
+            <label class="radio-btn" onclick="goToSlide(3)"></label>
         </div>
     </div>
 
@@ -30,29 +32,29 @@
         </header>
         <section class="sidebar__stepper">
             <div class="sidebar__step active" onclick="goToSlide(0)">
-                <div class="step__bullet fa fa-check"></div>
+                <div class="step__bullet">1</div>
                 <div class="step-content">
                     <div class="step__prefix">PASO 1</div>
                     <div class="step__title">Evaluación Pre anestésica</div>
-                    <p class="step__description">Registro de antecedentes alérgicos, clínicos y quirúrgicos, examen físico, de vía aérea y evaluación de riesgo.</p>
+                    <p class="step__description">Registro de antecedentes alérgicos, clínicos y quirúrgicos, examen físico, estudios complementarios y evaluación integral del riesgo anestésico.</p>
                 </div>
             </div>
             
             <div class="sidebar__step" onclick="goToSlide(1)">
-                <div class="step__bullet fa fa-check"></div>
+                <div class="step__bullet">2</div>
                 <div class="step-content">
                     <div class="step__prefix">PASO 2</div>
                     <div class="step__title">Protocolo anestésico</div>
-                    <p class="step__description">Documentación de condiciones de ingreso, monitoreo utilizado, técnicas anestésicas e invasivas, ventilación, fármacos y condiciones de egreso.</p>
+                    <p class="step__description">Documentación de condiciones de ingreso, monitoreo empleado, técnicas anestésicas e invasivas, ventilación, fármacos administrados y condiciones de egreso.</p>
                 </div>
             </div>
             
             <div class="sidebar__step" onclick="goToSlide(2)">
-                <div class="step__bullet fa fa-check"></div>
+                <div class="step__bullet">3</div>
                 <div class="step-content">
                     <div class="step__prefix">PASO 3</div>
                     <div class="step__title">Recuperación postanestésica</div>
-                    <p class="step__description">Registro de signos vitales en recuperación, evaluación del dolor, complicaciones y condiciones de egreso del paciente.</p>
+                    <p class="step__description">Registro de signos vitales en recuperación, evaluación del dolor, detección de complicaciones y verificación de condiciones necesarias para el egreso.</p>
                 </div>
             </div>
             
@@ -61,7 +63,7 @@
                 <div class="step-content">
                     <div class="step__prefix">ADICIONALES</div>
                     <div class="step__title">Medicación e informes</div>
-                    <p class="step__description">Registro de medicación sistémica antálgica y generación de informes de ecografía transesofágica con datos cardiovasculares clave.</p>
+                    <p class="step__description">Registro de medicación antálgica administrada y prescrita, con informes de función ventricular, perfusión coronaria, anatomía valvular y patologías cardíacas.</p>
                 </div>
             </div>
         </section>
