--- a/_includes/quotes.html
+++ b/_includes/quotes.html
@@ -15,8 +15,8 @@
                     <p class="testimonial-quote">
                         "NIVO+ ha transformado nuestra práctica anestesiológica. Ahora podemos registrar todos los datos necesarios sin comprometer nuestra atención al paciente. La generación automática de informes nos ahorra horas cada día."
                     </p>
-                    <h4 class="testimonial-author">Nombre y Apellido</h4>
-                    <p class="testimonial-role">Rol - Institución - Mat.</p>
+                    <h4 class="testimonial-author">Dr. Roberto Consigli</h4>
+                    <p class="testimonial-role">Jefe de Anestesiología Leben Salud<br><b>Río Negro y Neuquén</b></p>
                 </div>
 
                 <!-- Card 2 -->
@@ -24,8 +24,8 @@
                     <p class="testimonial-quote">
                         "La capacidad de registrar más de 60 datos por hora en tiempo real mientras atiendo al paciente ha sido revolucionaria. Los informes generados cumplen con todos los requisitos legales y son mucho más completos."
                     </p>
-                    <h4 class="testimonial-author">Nombre y Apellido</h4>
-                    <p class="testimonial-role">Rol - Institución - Mat.</p>
+                    <h4 class="testimonial-author">Dr. Arturo Salaza</h4>
+                    <p class="testimonial-role">Anestesiólogo Hospital Notti<br><b>Mendoza</b></p>
                 </div>
 
                 <!-- Card 3 -->
@@ -33,8 +33,8 @@
                     <p class="testimonial-quote">
                         "La interfaz móvil de NIVO+ me permite alternar entre dispositivos sin perder información. Los discursos automáticos para técnicas anestésicas han reducido nuestro tiempo de documentación en un 40%."
                     </p>
-                    <h4 class="testimonial-author">Nombre y Apellido</h4>
-                    <p class="testimonial-role">Rol - Institución - Mat.</p>
+                    <h4 class="testimonial-author">Dr. Marcos Malesich</h4>
+                    <p class="testimonial-role">Anestesiólogo de Clínica del Valle<br><b>Chubut</b></p>
                 </div>
             </div>
         </div>
