--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,6 +36,9 @@
     <div id="contacto">
       {% include footer.html %}
     </div>
+    <span class="modal__overlay" id="myModal">
+      {% include modal.html %}
+    </span>
   </section>
 </body>
 
