--- a/assets/main.scss
+++ b/assets/main.scss
@@ -31,6 +31,18 @@
     --headerHeight: 72px;
     --btnFontSize: 14px;
     --cardFontSize: 14px;
+
+    // Modal
+    --modal__bg-color: white;
+    --modal__overlay-bg: rgba(0, 0, 0, 0.6);
+    --modal__header-bg: #f5f5f5;
+    --modal__padding: 20px;
+    --modal__width: 72vw;
+    --modal__height: 48vh;
+    --modal__border-radius: 8px;
+    --shadow: rgba(140, 140, 140, 0.5);
+    --gradient: linear-gradient(to top right, #317aa0, #0abebb, #87d1b6);
+    --box-shadow: 2px 0 4px var(--shadow);
 }
 
 body {
@@ -48,7 +60,7 @@ body {
         padding: 0 var(--bodyPadding);
         box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1);
         position: fixed;
-        z-index: 100;
+        z-index: 2;
         width: 100vw;
         top: 0;
     }
@@ -76,11 +88,21 @@ body {
         color: var(--secondary);
     }
 
-    .btn__secondary--outline {
+    .btn__primary--outline {
         border: 2px solid var(--primary);
-        padding: 10px 20px;
+        padding: 2px 10px;
+        font-size: 24px;        
         border-radius: 4px;
         color: var(--primary);
+        background: transparent;
+        transition: all 0.3s;
+    }
+
+    .btn__secondary--outline {
+        border: 2px solid var(--secondary);
+        padding: 10px 20px;
+        border-radius: 4px;
+        color: var(--secondary);
         background: transparent;
         transition: all 0.3s;
     }
@@ -107,7 +129,7 @@ body {
         width: 100%;
         height: calc(100vh - var(--headerHeight));
         background: rgba(0, 0, 0, 0.5);
-        z-index: 99;
+        z-index: 1;
         opacity: 0;
         visibility: hidden;
         transition: all 0.3s ease;
@@ -116,6 +138,7 @@ body {
     .mobile-nav-overlay.active {
         opacity: 1;
         visibility: visible;
+        z-index: 2;
     }
 
     .mobile-nav-panel {
@@ -175,6 +198,10 @@ html {
     scroll-behavior: smooth;
 }
 
+#mainContent {
+    // height: 100vh;
+    // position: relative;
+}
 
 .hero {
     background: url("./img/nv_desktop.jpg") no-repeat center;
@@ -209,7 +236,7 @@ html {
     justify-content: center;
     left: var(--bodyPadding);
     max-width: 340px;
-    z-index: 2;
+    z-index: 1;
     position: relative;
 }
 
@@ -654,7 +681,7 @@ html {
     justify-content: center;
     cursor: pointer;
     transition: all 0.3s ease;
-    z-index: 10;
+    z-index: 1;
     color: var(--primary);
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
     font-size: var(--btnFontSize);
@@ -703,7 +730,7 @@ html {
             width: 380px;
             right: 0;
             bottom: 0;
-            z-index: 1;
+            z-index: 0;
         }
     }
 }
@@ -729,10 +756,10 @@ html {
 }
 
 // Process
-  .container-grid {
+    .container-grid {
         display: flex;
         flex-wrap: wrap;
-        height: 100vh;
+        height: calc(100vh - var(--headerHeight));
     }
 
     .main__content {
@@ -749,9 +776,8 @@ html {
     .slider-container {
         position: relative;
         width: 100%;
-        height: 480px;
-        border-radius: 12px;
-        box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+        height: 100%;
+        box-shadow: 0 10px 24px rgba(0, 0, 0, 0.1);
     }
 
     .image-slide {
@@ -760,7 +786,6 @@ html {
         left: 0;
         width: 100%;
         height: 100%;
-        box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
         object-fit: contain;
         opacity: 0;
         transition: opacity 0.5s ease-in-out;
@@ -781,7 +806,7 @@ html {
         width: 12px;
         height: 12px;
         border-radius: 50%;
-        background-color: var(--neutralLight);
+        background-color: var(--neutral);
         cursor: pointer;
         transition: all 0.3s ease;
     }
@@ -800,11 +825,11 @@ html {
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
-        width: 380px;
+        width: 280px;
     }
 
     .sidebar__header {
-        padding: 36px var(--cardPadding) 12px var(--cardPadding);
+        padding: var(--bodyPadding) var(--cardPadding) var(--panelGap) var(--cardPadding);
 
         .sidebar__title {
             font-size: var(--cardTitleSize);
@@ -817,17 +842,18 @@ html {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        height: 100%;
     }
 
     .sidebar__step {
         display: flex;
         flex-direction: row;
-        align-items: flex-start;
+        align-items: center;
         gap: var(--containerGap);
         cursor: pointer;
         transition: all 0.3s ease;
-        padding: var(--cardPadding);
-        // border-radius: 8px;
+        padding: var(--cardPadding) 24px;
+        height: 100%;
         border-bottom: solid 1px lightgray;
 
         &:last-child {
@@ -882,6 +908,7 @@ html {
 
     .step__title {
         font-size: 16px;
+        line-height: 1.3;
         font-weight: 600;
         color: var(--neutralDark);
         margin-bottom: 8px;
@@ -900,7 +927,6 @@ html {
         0% { opacity: 0; }
         100% { opacity: 1 }
     }
-
 
 // Footer
 footer {
@@ -983,24 +1009,149 @@ footer {
     }
 
     a {
-        color: var(--neutral);
+        color: var(--primary);
+        text-decoration: underline;
 
         &:hover {
-            color: var(--neutralDark);
+            color: var(--primaryDark);
+            cursor: pointer;
         }
 
         &:visited {
-            color: var(--primary);
+            color: var(--neutral);
         }
     }
 }
 
+// Modal
+.modal {
+
+    &__overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 100vh;
+        width: 100vw;
+        background: var(--modal__overlay-bg);
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 0.3s ease, visibility 0.3s ease;
+        z-index: 2;
+    }
+  
+    &__content {
+        --neutralLight: var(--neutral); 
+        position: absolute;
+        top: calc(100vh / 2 - var(--modal__height) / 2);
+        left: calc(100vw / 2 - var(--modal__width) / 2);
+        height: var(--modal__height);
+        width: var(--modal__width);
+        background-color: var(--modal__bg-color);
+        border-radius: var(--modal__border-radius);
+        padding: var(--modal__padding);
+        box-shadow: var(--shadow);
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 0.3s ease, visibility 0.3s ease;
+        z-index: 2;
+        overflow-y: scroll;
+    }
+  
+    &__header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background-color: white;
+      padding: var(--modal__padding);
+      border-bottom: 1px solid var(--neutral);
+
+      button {
+        cursor: pointer;
+      }
+    }
+  
+    &__title {
+      margin: 0;
+      font-size: 1.25rem;
+      color: var(--primaryDark);
+    }
+
+    &__body {
+      padding: var(--modal__padding);
+      font-size: 16px;
+      color: var(--neutralDark);
+      line-height: 1.5;
+    }
+  
+    &__image {
+      max-width: 100%;
+      height: auto;
+      margin-top: 15px;
+    }
+  
+    &__footer {
+      display: flex;
+      justify-content: flex-end;
+      padding: var(--modal__padding);
+      border-top: 1px solid #ccc;
+    }
+  
+    &__action, &__cancel {
+      padding: 10px 20px;
+      margin-left: 10px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+  
+    &__action {
+      background-color: var(--success);
+      color: white;
+    }
+  
+    &__cancel {
+      background-color: var(--danger);
+      color: white;
+    }
+  
+    // Modal active
+    .modal__content {
+            z-index: 2;
+        }
+
+    &--active {
+      .modal__content {
+        opacity: 1;
+        visibility: visible;
+        box-sizing: border-box;
+      }
+    }
+  }
+  
 
 @media (min-width: 769px) {
     .carousel-wrapper {
         justify-content: flex-start;
         padding-left: calc(50% - 160px); 
     }
+}
+
+@media (max-width: 920px) {
+    .nav-menu {
+        display: none;
+    }
+
+    .menu-toggle {
+        display: block;
+    }
+
+    // containers
+    .container-flex {
+        --bodyPadding: 36px;
+        padding: var(--bodyPadding);
+        height: 100%!important;
+    }
+
 }
 
 // Mobile
@@ -1018,14 +1169,6 @@ footer {
         }
     }
 
-    .nav-menu {
-        display: none;
-    }
-
-    .menu-toggle {
-        display: block;
-    }
-
     .navbar {
         padding: 0 16px;
     }
@@ -1035,7 +1178,7 @@ footer {
         padding: 0 var(--bodyPadding);
     }
 
-     .nav-menu {
+    .nav-menu {
         display: none;
     }
 
@@ -1057,7 +1200,7 @@ footer {
         display: none;
     }
 
-    .testimonials-dots {
+    .testimonials-dots, .carousel-nav {
         display: none;
     }
     
@@ -1072,7 +1215,7 @@ footer {
     }
         
     .container-grid {
-        height: 100%;
+        // height: 100%;
         flex-direction: column;
     }
     
@@ -1087,9 +1230,59 @@ footer {
             display: none;
         }
 
-        .sidebar__step {
-            align-items: center!important;
-            padding: 16px var(--cardPadding);
+        .sidebar__stepper {
+            flex-direction: row!important;
+
+            .sidebar__step {
+                --containerGap: 14px;
+                
+                padding: 16px 8px!important;
+                align-items: center!important;
+                padding: 16px var(--cardPadding);
+                justify-content: center;
+                width: 100%;
+                height: -webkit-fill-available;
+                border-right: solid 1px var(--neutral);
+                border-bottom: none!important;
+                box-sizing: border-box;
+
+                &:last-child {
+                    border-right: none!important;
+                }
+                
+                .step__bullet {
+                    width: 24px!important;
+                    height: 24px!important;
+                    font-size: 10px;
+
+                    &.active {
+                        transform: scale(.85);
+                    }
+                }
+
+                .step-content {
+                    display: flex;
+                    flex-direction: column;
+                    flex: 1;
+                }
+
+                .step__prefix {
+                    font-size: 7px!important;
+                    margin-bottom: 2px!important;
+                }
+
+                .step__title {
+                    font-size: 11px!important;
+                    margin-bottom: 0!important;
+                    text-wrap: nowrap;
+                }
+                
+                &:not(.active) {
+                    .step-content {
+                        display: none!important;
+                    }
+                }
+            }
         }
     }
     
@@ -1107,13 +1300,6 @@ footer {
     
     .section__title {
         font-size: 24px;
-    }
-
-    // containers
-    .container-flex {
-        --bodyPadding: 36px;
-        padding: var(--bodyPadding);
-        height: 100%!important;
     }
 
     // text
@@ -1138,6 +1324,10 @@ footer {
         --descriptionSize: 16px;
         font-size: var(--descriptionSize);
         text-align: center;
+
+        a {
+            --descriptionSize: 16px;
+        }
     }
 
     .hero__container {
@@ -1191,8 +1381,8 @@ footer {
     }
 
     .banner__container, .main__content {
-        --bodyPadding: 48px 36px;
-        height: 100vh;
+        --bodyPadding: 48px 36px 0px 48px;
+        height: calc(100vh - var(--headerHeight));
         padding: var(--bodyPadding);
 
         .banner__content {
@@ -1231,6 +1421,11 @@ footer {
         height: 45px;
     }
 
+    .modal__content {
+        --modal__width: 90vw;
+        --modal__height: 75vh;
+    }
+
 }
     
     //  Mini-slider
@@ -1256,7 +1451,6 @@ footer {
                 }
             }
         }
-
 }   
 
     #card1:checked ~ .mini-cards-wrapper {
@@ -1277,7 +1471,7 @@ footer {
         top: 0;
         left: 0;
         width: 100vw;
-        height: 100vh;
+        height: 100dvh;
         background: white;
         display: flex;
         align-items: center;
