--- a/assets/main.css
+++ b/assets/main.css
@@ -29,6 +29,16 @@
   --headerHeight: 72px;
   --btnFontSize: 14px;
   --cardFontSize: 14px;
+  --modal__bg-color: white;
+  --modal__overlay-bg: rgba(0, 0, 0, 0.6);
+  --modal__header-bg: #f5f5f5;
+  --modal__padding: 20px;
+  --modal__width: 72vw;
+  --modal__height: 48vh;
+  --modal__border-radius: 8px;
+  --shadow: rgba(140, 140, 140, 0.5);
+  --gradient: linear-gradient(to top right, #317aa0, #0abebb, #87d1b6);
+  --box-shadow: 2px 0 4px var(--shadow);
 }
 
 body {
@@ -47,7 +57,7 @@ body {
   padding: 0 var(--bodyPadding);
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
   position: fixed;
-  z-index: 100;
+  z-index: 2;
   width: 100vw;
   top: 0;
 }
@@ -75,11 +85,21 @@ body {
   color: var(--secondary);
 }
 
-.btn__secondary--outline {
+.btn__primary--outline {
   border: 2px solid var(--primary);
-  padding: 10px 20px;
+  padding: 2px 10px;
+  font-size: 24px;
   border-radius: 4px;
   color: var(--primary);
+  background: transparent;
+  transition: all 0.3s;
+}
+
+.btn__secondary--outline {
+  border: 2px solid var(--secondary);
+  padding: 10px 20px;
+  border-radius: 4px;
+  color: var(--secondary);
   background: transparent;
   transition: all 0.3s;
 }
@@ -105,7 +125,7 @@ body {
   width: 100%;
   height: calc(100vh - var(--headerHeight));
   background: rgba(0, 0, 0, 0.5);
-  z-index: 99;
+  z-index: 1;
   opacity: 0;
   visibility: hidden;
   transition: all 0.3s ease;
@@ -114,6 +134,7 @@ body {
 .mobile-nav-overlay.active {
   opacity: 1;
   visibility: visible;
+  z-index: 2;
 }
 
 .mobile-nav-panel {
@@ -205,7 +226,7 @@ html {
   justify-content: center;
   left: var(--bodyPadding);
   max-width: 340px;
-  z-index: 2;
+  z-index: 1;
   position: relative;
 }
 
@@ -615,7 +636,7 @@ html {
   justify-content: center;
   cursor: pointer;
   transition: all 0.3s ease;
-  z-index: 10;
+  z-index: 1;
   color: var(--primary);
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
   font-size: var(--btnFontSize);
@@ -661,7 +682,7 @@ html {
   width: 380px;
   right: 0;
   bottom: 0;
-  z-index: 1;
+  z-index: 0;
 }
 
 .testimonials-grid {
@@ -686,7 +707,7 @@ html {
 .container-grid {
   display: flex;
   flex-wrap: wrap;
-  height: 100vh;
+  height: calc(100vh - var(--headerHeight));
 }
 
 .main__content {
@@ -703,9 +724,8 @@ html {
 .slider-container {
   position: relative;
   width: 100%;
-  height: 480px;
-  border-radius: 12px;
-  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+  height: 100%;
+  box-shadow: 0 10px 24px rgba(0, 0, 0, 0.1);
 }
 
 .image-slide {
@@ -714,7 +734,6 @@ html {
   left: 0;
   width: 100%;
   height: 100%;
-  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
   object-fit: contain;
   opacity: 0;
   transition: opacity 0.5s ease-in-out;
@@ -735,7 +754,7 @@ html {
   width: 12px;
   height: 12px;
   border-radius: 50%;
-  background-color: var(--neutralLight);
+  background-color: var(--neutral);
   cursor: pointer;
   transition: all 0.3s ease;
 }
@@ -754,11 +773,11 @@ html {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  width: 380px;
+  width: 280px;
 }
 
 .sidebar__header {
-  padding: 36px var(--cardPadding) 12px var(--cardPadding);
+  padding: var(--bodyPadding) var(--cardPadding) var(--panelGap) var(--cardPadding);
 }
 .sidebar__header .sidebar__title {
   font-size: var(--cardTitleSize);
@@ -770,16 +789,18 @@ html {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  height: 100%;
 }
 
 .sidebar__step {
   display: flex;
   flex-direction: row;
-  align-items: flex-start;
+  align-items: center;
   gap: var(--containerGap);
   cursor: pointer;
   transition: all 0.3s ease;
-  padding: var(--cardPadding);
+  padding: var(--cardPadding) 24px;
+  height: 100%;
   border-bottom: solid 1px lightgray;
 }
 .sidebar__step:last-child {
@@ -832,6 +853,7 @@ html {
 
 .step__title {
   font-size: 16px;
+  line-height: 1.3;
   font-weight: 600;
   color: var(--neutralDark);
   margin-bottom: 8px;
@@ -929,19 +951,120 @@ footer.container-flex .section__description {
   gap: var(--containerGapRow);
 }
 .footer--disclaimer a {
-  color: var(--neutral);
+  color: var(--primary);
+  text-decoration: underline;
 }
 .footer--disclaimer a:hover {
-  color: var(--neutralDark);
+  color: var(--primaryDark);
+  cursor: pointer;
 }
 .footer--disclaimer a:visited {
-  color: var(--primary);
+  color: var(--neutral);
+}
+
+.modal__overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  background: var(--modal__overlay-bg);
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease, visibility 0.3s ease;
+  z-index: 2;
+}
+.modal__content {
+  --neutralLight: var(--neutral);
+  position: absolute;
+  top: calc(50vh - var(--modal__height) / 2);
+  left: calc(50vw - var(--modal__width) / 2);
+  height: var(--modal__height);
+  width: var(--modal__width);
+  background-color: var(--modal__bg-color);
+  border-radius: var(--modal__border-radius);
+  padding: var(--modal__padding);
+  box-shadow: var(--shadow);
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease, visibility 0.3s ease;
+  z-index: 2;
+  overflow-y: scroll;
+}
+.modal__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: white;
+  padding: var(--modal__padding);
+  border-bottom: 1px solid var(--neutral);
+}
+.modal__header button {
+  cursor: pointer;
+}
+.modal__title {
+  margin: 0;
+  font-size: 1.25rem;
+  color: var(--primaryDark);
+}
+.modal__body {
+  padding: var(--modal__padding);
+  font-size: 16px;
+  color: var(--neutralDark);
+  line-height: 1.5;
+}
+.modal__image {
+  max-width: 100%;
+  height: auto;
+  margin-top: 15px;
+}
+.modal__footer {
+  display: flex;
+  justify-content: flex-end;
+  padding: var(--modal__padding);
+  border-top: 1px solid #ccc;
+}
+.modal__action, .modal__cancel {
+  padding: 10px 20px;
+  margin-left: 10px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.modal__action {
+  background-color: var(--success);
+  color: white;
+}
+.modal__cancel {
+  background-color: var(--danger);
+  color: white;
+}
+.modal .modal__content {
+  z-index: 2;
+}
+.modal--active .modal__content {
+  opacity: 1;
+  visibility: visible;
+  box-sizing: border-box;
 }
 
 @media (min-width: 769px) {
   .carousel-wrapper {
     justify-content: flex-start;
     padding-left: calc(50% - 160px);
+  }
+}
+@media (max-width: 920px) {
+  .nav-menu {
+    display: none;
+  }
+  .menu-toggle {
+    display: block;
+  }
+  .container-flex {
+    --bodyPadding: 36px;
+    padding: var(--bodyPadding);
+    height: 100% !important;
   }
 }
 @media (max-width: 768px) {
@@ -953,12 +1076,6 @@ footer.container-flex .section__description {
   }
   .logo-container .tagline {
     transform: scale(1) !important;
-  }
-  .nav-menu {
-    display: none;
-  }
-  .menu-toggle {
-    display: block;
   }
   .navbar {
     padding: 0 16px;
@@ -984,7 +1101,7 @@ footer.container-flex .section__description {
   .carousel-nav {
     display: none;
   }
-  .testimonials-dots {
+  .testimonials-dots, .carousel-nav {
     display: none;
   }
   .dot {
@@ -996,7 +1113,6 @@ footer.container-flex .section__description {
     padding: 20px 0;
   }
   .container-grid {
-    height: 100%;
     flex-direction: column;
   }
   .main__content,
@@ -1009,10 +1125,57 @@ footer.container-flex .section__description {
   .sidebar .sidebar__header {
     display: none;
   }
-  .main__content .sidebar__step,
-  .sidebar .sidebar__step {
+  .main__content .sidebar__stepper,
+  .sidebar .sidebar__stepper {
+    flex-direction: row !important;
+  }
+  .main__content .sidebar__stepper .sidebar__step,
+  .sidebar .sidebar__stepper .sidebar__step {
+    --containerGap: 14px;
+    padding: 16px 8px !important;
     align-items: center !important;
     padding: 16px var(--cardPadding);
+    justify-content: center;
+    width: 100%;
+    height: -webkit-fill-available;
+    border-right: solid 1px var(--neutral);
+    border-bottom: none !important;
+    box-sizing: border-box;
+  }
+  .main__content .sidebar__stepper .sidebar__step:last-child,
+  .sidebar .sidebar__stepper .sidebar__step:last-child {
+    border-right: none !important;
+  }
+  .main__content .sidebar__stepper .sidebar__step .step__bullet,
+  .sidebar .sidebar__stepper .sidebar__step .step__bullet {
+    width: 24px !important;
+    height: 24px !important;
+    font-size: 10px;
+  }
+  .main__content .sidebar__stepper .sidebar__step .step__bullet.active,
+  .sidebar .sidebar__stepper .sidebar__step .step__bullet.active {
+    transform: scale(0.85);
+  }
+  .main__content .sidebar__stepper .sidebar__step .step-content,
+  .sidebar .sidebar__stepper .sidebar__step .step-content {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+  }
+  .main__content .sidebar__stepper .sidebar__step .step__prefix,
+  .sidebar .sidebar__stepper .sidebar__step .step__prefix {
+    font-size: 7px !important;
+    margin-bottom: 2px !important;
+  }
+  .main__content .sidebar__stepper .sidebar__step .step__title,
+  .sidebar .sidebar__stepper .sidebar__step .step__title {
+    font-size: 11px !important;
+    margin-bottom: 0 !important;
+    text-wrap: nowrap;
+  }
+  .main__content .sidebar__stepper .sidebar__step:not(.active) .step-content,
+  .sidebar .sidebar__stepper .sidebar__step:not(.active) .step-content {
+    display: none !important;
   }
   .main__content {
     padding: 20px;
@@ -1025,11 +1188,6 @@ footer.container-flex .section__description {
   }
   .section__title {
     font-size: 24px;
-  }
-  .container-flex {
-    --bodyPadding: 36px;
-    padding: var(--bodyPadding);
-    height: 100% !important;
   }
   .section__badge {
     font-size: 14px;
@@ -1049,6 +1207,9 @@ footer.container-flex .section__description {
     --descriptionSize: 16px;
     font-size: var(--descriptionSize);
     text-align: center;
+  }
+  .hero__description a, .section__description a {
+    --descriptionSize: 16px;
   }
   .hero__container {
     --bodyPadding: 24px;
@@ -1087,8 +1248,8 @@ footer.container-flex .section__description {
     height: calc(100vh - var(--headerHeight));
   }
   .banner__container, .main__content {
-    --bodyPadding: 48px 36px;
-    height: 100vh;
+    --bodyPadding: 48px 36px 0px 48px;
+    height: calc(100vh - var(--headerHeight));
     padding: var(--bodyPadding);
   }
   .banner__container .banner__content, .main__content .banner__content {
@@ -1117,6 +1278,10 @@ footer.container-flex .section__description {
   .social-link {
     width: 45px;
     height: 45px;
+  }
+  .modal__content {
+    --modal__width: 90vw;
+    --modal__height: 75vh;
   }
 }
 #cards-slider.mini-cards-container {
@@ -1154,7 +1319,7 @@ footer.container-flex .section__description {
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: 100dvh;
   background: white;
   display: flex;
   align-items: center;
