feat(quotes): actualiza testimoniales + stepper mobile

--- a/_includes/process.html
+++ b/_includes/process.html
@@ -12,8 +12,8 @@
             <img class="image-slide" src="./assets/img/nv_screen-02.png" alt="Protocolo anestésico">
             <img class="image-slide" src="./assets/img/nv_screen-04.png" alt="Recuperación postanestésica">
             <img class="image-slide" src="./assets/img/nv_screen-03.png" alt="Medicación e informes">
-                <i class="carousel-nav prev fa fa-chevron-left" onclick="changeSlide(-1)"></i>
-                <i class="carousel-nav next fa fa-chevron-right" onclick="changeSlide(1)"></i>
+                <!-- <i class="carousel-nav prev fa fa-chevron-left" onclick="changeSlide(-1)"></i>
+                <i class="carousel-nav next fa fa-chevron-right" onclick="changeSlide(1)"></i> -->
         </div>
         
         <!-- Navigation Dots -->
