--- a/assets/main.css
+++ b/assets/main.css
@@ -631,7 +631,7 @@ html {
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  display: flex !important;
+  display: flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
@@ -725,7 +725,6 @@ html {
   position: relative;
   width: 100%;
   height: 100%;
-  box-shadow: 0 10px 24px rgba(0, 0, 0, 0.1);
 }
 
 .image-slide {
@@ -737,6 +736,7 @@ html {
   object-fit: contain;
   opacity: 0;
   transition: opacity 0.5s ease-in-out;
+  box-shadow: 0 10px 24px rgba(0, 0, 0, 0.1);
 }
 
 .image-slide.active {
@@ -1113,13 +1113,16 @@ footer.container-flex .section__description {
     padding: 20px 0;
   }
   .container-grid {
+    padding: var(--cardPadding) 0 60px 0;
+    background: white;
     flex-direction: column;
   }
   .main__content,
   .sidebar {
-    --bodyPadding: 36px;
     width: 100%;
     height: fit-content;
+    padding: 0 var(--cardPadding);
+    background-color: white !important;
   }
   .main__content .sidebar__header,
   .sidebar .sidebar__header {
@@ -1138,13 +1141,22 @@ footer.container-flex .section__description {
     justify-content: center;
     width: 100%;
     height: -webkit-fill-available;
-    border-right: solid 1px var(--neutral);
     border-bottom: none !important;
     box-sizing: border-box;
+  }
+  .main__content .sidebar__stepper .sidebar__step:first-child,
+  .sidebar .sidebar__stepper .sidebar__step:first-child {
+    padding-left: 0 !important;
   }
   .main__content .sidebar__stepper .sidebar__step:last-child,
   .sidebar .sidebar__stepper .sidebar__step:last-child {
     border-right: none !important;
+  }
+  .main__content .sidebar__stepper .sidebar__step.active,
+  .sidebar .sidebar__stepper .sidebar__step.active {
+    background-color: transparent !important;
+    border-bottom: solid 2px var(--primary);
+    box-shadow: none !important;
   }
   .main__content .sidebar__stepper .sidebar__step .step__bullet,
   .sidebar .sidebar__stepper .sidebar__step .step__bullet {
@@ -1154,7 +1166,7 @@ footer.container-flex .section__description {
   }
   .main__content .sidebar__stepper .sidebar__step .step__bullet.active,
   .sidebar .sidebar__stepper .sidebar__step .step__bullet.active {
-    transform: scale(0.85);
+    transform: scale(0.9);
   }
   .main__content .sidebar__stepper .sidebar__step .step-content,
   .sidebar .sidebar__stepper .sidebar__step .step-content {
@@ -1248,7 +1260,7 @@ footer.container-flex .section__description {
     height: calc(100vh - var(--headerHeight));
   }
   .banner__container, .main__content {
-    --bodyPadding: 48px 36px 0px 48px;
+    --bodyPadding: 48px var(--cardPadding) 0px 48px;
     height: calc(100vh - var(--headerHeight));
     padding: var(--bodyPadding);
   }
