--- a/assets/main.scss
+++ b/assets/main.scss
@@ -676,7 +676,7 @@ html {
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    display: flex!important;
+    display: flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
@@ -777,7 +777,6 @@ html {
         position: relative;
         width: 100%;
         height: 100%;
-        box-shadow: 0 10px 24px rgba(0, 0, 0, 0.1);
     }
 
     .image-slide {
@@ -789,6 +788,7 @@ html {
         object-fit: contain;
         opacity: 0;
         transition: opacity 0.5s ease-in-out;
+        box-shadow: 0 10px 24px rgba(0, 0, 0, 0.1);
     }   
 
     .image-slide.active {
@@ -1215,16 +1215,19 @@ footer {
     }
         
     .container-grid {
-        // height: 100%;
+        padding: var(--cardPadding) 0 60px 0;
+        background: white;
         flex-direction: column;
     }
     
     .main__content,
     .sidebar {
-        --bodyPadding: 36px;
+        // --bodyPadding: 36px;
         
         width: 100%;
         height: fit-content;
+        padding: 0 var(--cardPadding);
+        background-color: white!important;
 
         .sidebar__header {
             display: none;
@@ -1242,12 +1245,21 @@ footer {
                 justify-content: center;
                 width: 100%;
                 height: -webkit-fill-available;
-                border-right: solid 1px var(--neutral);
                 border-bottom: none!important;
                 box-sizing: border-box;
 
+                &:first-child {
+                    padding-left: 0!important;
+                }
+
                 &:last-child {
                     border-right: none!important;
+                }
+
+                &.active {
+                    background-color: transparent!important;
+                    border-bottom: solid 2px var(--primary);
+                    box-shadow: none!important;
                 }
                 
                 .step__bullet {
@@ -1256,7 +1268,7 @@ footer {
                     font-size: 10px;
 
                     &.active {
-                        transform: scale(.85);
+                        transform: scale(.9);
                     }
                 }
 
@@ -1381,7 +1393,7 @@ footer {
     }
 
     .banner__container, .main__content {
-        --bodyPadding: 48px 36px 0px 48px;
+        --bodyPadding: 48px var(--cardPadding) 0px 48px;
         height: calc(100vh - var(--headerHeight));
         padding: var(--bodyPadding);
 
