feat(modal): agrega privacidad

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,6 +39,9 @@
     <span class="modal__overlay" id="myModal">
       {% include modal.html %}
     </span>
+    <span class="privacy__overlay" id="privacyModal">
+      {% include privacy.html %}
+    </span>
   </section>
 </body>
 
