--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,6 +18,6 @@
     <p><b>© 2025 NIVO+ es una marca registrada.</b> Todos los derechos reservados.</p>
     <nav>
         <a id="openModal">Términos y condiciones</a>
-        <a id="" href="">Política de privacidad</a>
+        <a id="openPrivacy">Política de privacidad</a>
     </nav>
 </div>
