--- a/assets/main.css
+++ b/assets/main.css
@@ -1048,6 +1048,30 @@ footer.container-flex .section__description {
   box-sizing: border-box;
 }
 
+.privacy__overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  background: var(--modal__overlay-bg);
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease, visibility 0.3s ease;
+  z-index: 2;
+}
+
+.privacy--active .modal__content {
+  opacity: 1;
+  visibility: visible;
+  box-sizing: border-box;
+}
+.privacy--active .modal__body {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
 @media (min-width: 769px) {
   .carousel-wrapper {
     justify-content: flex-start;
