feat(slider): agrega expand image + fix stepper mobile

--- a/_includes/process.html
+++ b/_includes/process.html
@@ -1,5 +1,4 @@
 <div id="" class="container-grid">
-    <!-- Main Content Section -->
     <div class="main__content">
         <div class="section__badge">La Solución</div>
         <h1 class="section__title" id="main-title">Evaluación Pre anestésica</h1>
@@ -11,10 +10,14 @@
             <img class="image-slide active" src="./assets/img/nv_screen-01.png" alt="Evaluación Pre anestésica">
             <img class="image-slide" src="./assets/img/nv_screen-02.png" alt="Protocolo anestésico">
             <img class="image-slide" src="./assets/img/nv_screen-04.png" alt="Recuperación postanestésica">
-            <img class="image-slide" src="./assets/img/nv_screen-03.png" alt="Medicación e informes">
+            <img class="image-slide" src="./assets/img/nv_screen-04.jpeg" alt="Medicación e informes">
         </div>
-        
-        <!-- Navigation Dots -->
+
+        <div id="zoom-modal" class="zoom-modal">
+            <button size="md" class="fab__neutral--outline" id="zoomClose">&times;</button>
+            <img class="zoom-image" src="" alt="Zoomed image">
+        </div>
+
         <div class="fake-radio">
             <label class="radio-btn active" onclick="goToSlide(0)"></label>
             <label class="radio-btn" onclick="goToSlide(1)"></label>
