feat(slider): actualiza imagenes + zoom-in

--- a/_includes/process.html
+++ b/_includes/process.html
@@ -7,9 +7,9 @@
         </p>
         
         <div class="slider-container">
-            <img class="image-slide active" src="./assets/img/nv_screen-01.png" alt="Evaluación Pre anestésica">
-            <img class="image-slide" src="./assets/img/nv_screen-02.png" alt="Protocolo anestésico">
-            <img class="image-slide" src="./assets/img/nv_screen-04.png" alt="Recuperación postanestésica">
+            <img class="image-slide active" src="./assets/img/nv_screen-01.jpg" alt="Evaluación Pre anestésica">
+            <img class="image-slide" src="./assets/img/nv_screen-02.jpg" alt="Protocolo anestésico">
+            <img class="image-slide" src="./assets/img/nv_screen-03.jpg" alt="Recuperación postanestésica">
             <img class="image-slide" src="./assets/img/nv_screen-04.jpeg" alt="Medicación e informes">
         </div>
 
